--- a/index.html
+++ b/index.html
@@ -6,9 +6,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donate Now</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&family=Roboto:ital,wght@0,700;1,500&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+    <section class="top-banner">
+        <div class="banner-text">
+            <h1>Lets Help The Needed People</h1>
+            <h1>With Our Contribution</h1>
+            <p>The situation in Sylhet remains dire as more than 9 people died due to electrocution and lightning.At
+                least
+                21 people, including those in Sylhet, have died due to electrocution in Bangladesh.</p>
+
+            <a class="tomato-button" target="_blank" href="">Donate Now</a>
+            <br><br><br><br><br><br>
+        </div>
+    </section>
 
 </body>
 
