--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         <div class="banner-text">
             <h1>Lets Help The Needed People</h1>
             <h1>With Our Contribution</h1>
-            <p>The situation in Sylhet remains dire as more than 9 people died due to electrocution and lightning.At
+            <p>The situation in Sylhet remains dire as more than 9 people died due <br> to electrocution and
+                lightning.At
                 least
                 21 people, including those in Sylhet, have died due to electrocution in Bangladesh.</p>
-
+            <br>
             <a class="tomato-button" target="_blank" href="">Donate Now</a>
-            <br><br><br><br><br><br>
         </div>
     </section>
 
