added donate plan

--- a/index.html
+++ b/index.html
@@ -15,17 +15,43 @@
 </head>
 
 <body>
-    <section class="top-banner">
-        <div class="banner-text">
+    <section id="top-banner">
+        <div id="banner-text">
             <h1>Lets Help The Needed People</h1>
             <h1>With Our Contribution</h1>
-            <p>The situation in Sylhet remains dire as more than 9 people died due <br> to electrocution and
-                lightning.At
+            <p>The situation in Sylhet remains dire as more than 9 people died due to electrocution and
+                lightning.<br> At
                 least
                 21 people, including those in Sylhet, have died due to electrocution in Bangladesh.</p>
             <br>
             <a class="tomato-button" target="_blank" href="">Donate Now</a>
         </div>
+    </section>
+
+    <section id='donate-now'>
+        <h1>Donate Today</h1>
+        <p>We are continuously helping the sufferer. You can donate now and be the part to make them smiling.<br>To
+            Donate enter or pick any amount from below</p>
+        <div class="donate-box-container">
+            <div class="donate-box">
+                <h2>100tk</h2>
+            </div>
+            <div id="selected-box">
+                <h2>200tk</h2>
+            </div>
+            <div class="donate-box">
+                <h2>500tk</h2>
+            </div>
+            <div class="donate-box">
+                <h2>1000tk</h2>
+            </div>
+            <div class="donate-box">
+                <h2>5000tk</h2>
+            </div>
+        </div>
+        <input type="text" name="" placeholder="Other Amount (Taka)" id="donate-input-text"><br>
+        <br><a class="tomato-button" target="_blank" href="">Donate Now</a>
+
     </section>
 
 </body>
