--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <h1>Donate Today</h1>
         <p>We are continuously helping the sufferer. You can donate now and be the part to make them smiling.<br>To
             Donate enter or pick any amount from below</p>
-        <div class="donate-box-container">
+        <div class="box-container">
             <div class="donate-box">
                 <h2>100tk</h2>
             </div>
@@ -51,9 +51,36 @@
         </div>
         <input type="text" name="" placeholder="Other Amount (Taka)" id="donate-input-text"><br>
         <br><a class="tomato-button" target="_blank" href="">Donate Now</a>
-
     </section>
 
+    <section id="donate-plan">
+        <h1>Our Donate Plan</h1>
+        <p>Every week we donate the needed people with our team. We have nominated corresponding tag officers. <br>
+            Everytime
+            group of volunteers along with the tag officers move to the place directly</p>
+        <div class="box-container">
+            <div class="donate-plan-box">
+                <img src="images/icons/food.png" alt="">
+                <h2>Food for a family</h2>
+                <p>With the contribution of yours, we can provide the food for the needed family. Any family, anywhere
+                    can be our benificiary.</p>
+            </div>
+            <div class="donate-plan-box">
+                <img src="images/icons/shelter.png" alt="">
+                <h2>Shelter for a family</h2>
+                <p>We dream no homeless family in Bangladesh. With your contribution, we make the shelter for homeless
+                    people of Bangladesh, beyond area, beyond anything.</p>
+            </div>
+            <div class="donate-plan-box">
+                <img src="images/icons/Frame-1.png" alt="">
+                <h2>Education for a child</h2>
+                <p>Besides food and shelter, we also dream to educate all the deprived children. Primarily we are
+                    focusing the all children of our sheltre, later we will move on all over the Bangladesh.</p>
+            </div>
+
+        </div>
+
+    </section>
 </body>
 
 </html>
