starting get updates

--- a/index.html
+++ b/index.html
@@ -59,26 +59,34 @@
             Everytime
             group of volunteers along with the tag officers move to the place directly</p>
         <div class="box-container">
-            <div class="donate-plan-box">
+            <div id="donate-plan-box-food">
                 <img src="images/icons/food.png" alt="">
                 <h2>Food for a family</h2>
-                <p>With the contribution of yours, we can provide the food for the needed family. Any family, anywhere
+                <p class="plan-box-details">With the contribution of yours, we can provide the food for the needed
+                    family. Any family, anywhere
                     can be our benificiary.</p>
             </div>
-            <div class="donate-plan-box">
+            <div id="donate-plan-box-shelter">
                 <img src="images/icons/shelter.png" alt="">
                 <h2>Shelter for a family</h2>
-                <p>We dream no homeless family in Bangladesh. With your contribution, we make the shelter for homeless
+                <p class="plan-box-details">We dream no homeless family in Bangladesh. With your contribution, we make
+                    the shelter for homeless
                     people of Bangladesh, beyond area, beyond anything.</p>
             </div>
-            <div class="donate-plan-box">
+            <div id="donate-plan-box-frame">
                 <img src="images/icons/Frame-1.png" alt="">
                 <h2>Education for a child</h2>
-                <p>Besides food and shelter, we also dream to educate all the deprived children. Primarily we are
+                <p class="plan-box-details">Besides food and shelter, we also dream to educate all the deprived
+                    children. Primarily we are
                     focusing the all children of our sheltre, later we will move on all over the Bangladesh.</p>
             </div>
-
         </div>
+    </section>
+
+    <section id="update-section">
+        <h1>Get Updates</h1>
+        <p>Please subscribe to know about our recent activities. We frequently conduct seminars, workshop and free
+            medical campings. </p>
 
     </section>
 </body>
