--- a/index.html
+++ b/index.html
@@ -85,9 +85,11 @@
 
     <section id="update-section">
         <h1>Get Updates</h1>
-        <p>Please subscribe to know about our recent activities. We frequently conduct seminars, workshop and free
-            medical campings. </p>
-
+        <div id="update-section-details">
+            <p>Please subscribe to know about our recent activities. We frequently conduct
+                seminars, workshop and free
+                medical campings. </p>
+        </div>
     </section>
 </body>
 
