added update form

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 least
                 21 people, including those in Sylhet, have died due to electrocution in Bangladesh.</p>
             <br>
-            <a class="tomato-button" target="_blank" href="">Donate Now</a>
+            <a class="tomato-button" target="_blank" href="https://www.linkedin.com/in/md-atiqurrahman/">Donate Now</a>
         </div>
     </section>
 
@@ -89,6 +89,12 @@
             <p>Please subscribe to know about our recent activities. We frequently conduct
                 seminars, workshop and free
                 medical campings. </p>
+        </div>
+
+        <div id="update-form-container">
+            <div id="update-form">
+                <input type="text" placeholder="Email" id="update-input"><button id="update-button">Subscribe</button>
+            </div>
         </div>
     </section>
 </body>
