--- a/index.html
+++ b/index.html
@@ -98,5 +98,9 @@
         </div>
     </section>
 </body>
+<footer>
+    <h3 id="footer-text">Cryption Solutions</h3>
+    <p>© All Rights Reserves to Cryption Solutions ltd.</p>
+</footer>
 
 </html>
