--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
     </section>
 </body>
 <footer>
-    <h3 id="footer-text">Cryption Solutions</h3>
-    <p>© All Rights Reserves to Cryption Solutions ltd.</p>
+    <h3 id="footer-text">Krypton Solutions</h3>
+    <p>© All Rights Reserves to Krypton Solutions ltd.</p>
 </footer>
 
 </html>
