--- a/index.html
+++ b/index.html
@@ -83,6 +83,21 @@
         </div>
     </section>
 
+    <section id="recent-campaigns">
+        <h1>Recent Campaigns</h1>
+        <div id="campaign-container">
+            <div class="campaign-item">
+                <img src="" alt="">
+
+            </div>
+
+            <div class="campaign-item">
+
+            </div>
+
+        </div>
+    </section>
+
     <section id="update-section">
         <h1>Get Updates</h1>
         <div id="update-section-details">
