image added in campaign

--- a/index.html
+++ b/index.html
@@ -87,12 +87,11 @@
         <h1>Recent Campaigns</h1>
         <div id="campaign-container">
             <div class="campaign-item">
-                <img src="" alt="">
-
+                <img src="images/campaigns/donation2.jpg" alt="">
             </div>
 
             <div class="campaign-item">
-
+                <img src="images/campaigns/donation5.jpg" alt="">
             </div>
 
         </div>
