--- a/index.html
+++ b/index.html
@@ -85,27 +85,37 @@
 
     <section id="recent-campaigns">
         <h1>Recent Campaigns</h1>
-        <div>
-
-        </div>
-        <div id="campaign-container">
-            <div class="campaign-item">
-                <img src="images/campaigns/donation2.jpg" alt="">
-                <p>Last month this campaign was conducted at Sirajganj area. Our donationa team stayed there more
-                    than 15 days and gave food and shelter campings. We covered more than 40,000 peoples there... <span
-                        class="read-more">Read
-                        More</span> </p>
+        <div id="campaign-box">
+            <div id="left-arrow">
+                <img src="images/icons/left-arrow.png" alt="">
+                <p class="arrow-text">load more</p>
             </div>
+            <div id="campaign-container">
+                <div class="campaign-item">
+                    <img src="images/campaigns/donation2.jpg" alt="">
+                    <p>Last month this campaign was conducted at Sirajganj area. Our donationa team stayed there more
+                        than 15 days and gave food and shelter campings. We covered more than 40,000 peoples there...
+                        <span class="read-more">Read
+                            More</span>
+                    </p>
+                </div>
 
-            <div class="campaign-item">
-                <img src="images/campaigns/donation5.jpg" alt="">
-                <p>Currently this campaign is running at Sylhet flooded area. Majority of our current donation are being
-                    spended at this area. Most of our volunteers and tag officers are giving their level best effort...
-                    <span class="read-more">Read
-                        More</span>
-                </p>
+                <div class="campaign-item">
+                    <img src="images/campaigns/donation5.jpg" alt="">
+                    <p>Currently this campaign is running at Sylhet flooded area. Majority of our current donation are
+                        being
+                        spended at this area. Most of our volunteers and tag officers are giving their level best
+                        effort...
+                        <span class="read-more">Read
+                            More</span>
+                    </p>
+                </div>
+
             </div>
-
+            <div id="right-arrow">
+                <img src="images/icons/right-arrow.png" alt="">
+                <p class="arrow-text">load more</p>
+            </div>
         </div>
     </section>
 
