--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </section>
 
     <section id="donate-plan">
-        <h1>Our Donate Plan</h1>
+        <h1>Our Donation Plan</h1>
         <p>Every week we donate the needed people with our team. We have nominated corresponding tag officers. <br>
             Everytime
             group of volunteers along with the tag officers move to the place directly</p>
